app/public/stylesheets/main.css
body{
    position: relative;
    z-index: 2;
    background: white;
    font-family: sans-serif;
    margin: 0;
}
.videoContainer__body .hide{
    display: none;
}
.flexboxCenter, .videoContainer__body .btnContainer.top, .videoContainer__body .videoContainer__spinner {
  display: flex;
  align-items: center;
  justify-content: center;
}

.localVideo--props, .videoContainer__body #localVideoContainer #localVideo, .videoContainer__body #localVideoContainer {
  position: absolute;
  bottom: 0;
  left: 0;
  z-index: 10;
}

.loadingDots, .videoContainer__body .btnContainer.top .callingString:after, .videoContainer__body #remoteContainer .loadingScreen .loadingScreen__text::after {
  display: inline-block;
  animation: dotty steps(1, end) 2s infinite;
  content: "";
  position: absolute;
}

@keyframes dotty {
  0% {
    content: "";
  }
  25% {
    content: ".";
  }
  50% {
    content: "..";
  }
  75% {
    content: "...";
  }
  100% {
    content: "";
  }
}
.videoContainer__body #localVideoContainer {
  transition: 0.5s;
  opacity: 0;
  min-height: 100px;
}
.videoContainer__body #localVideoContainer #localVideo {
  opacity: 0;
  width: 112.7px;
}
.videoContainer__body #localVideoContainer.display {
  opacity: 1;
}
.videoContainer__body #localVideoContainer.display #localVideo {
  opacity: 1;
}
.videoContainer__body #remoteContainer {
  min-width: 100%%;
  min-height: 100%;
}
.videoContainer__body #remoteContainer .callingScreen {
  background-color: #4d5c6c;
  min-height: 480px;
  text-align: center;
}
.videoContainer__body #remoteContainer .callingScreen .callingScreen__image {
  width: 200px;
  height: 200px;
  border-radius: 100px;
  border: 1px solid white;
  margin: 0 auto;
  display: inline-block;
  background-position: center;
  background-size: cover;
}
.videoContainer__body #remoteContainer .callingScreen .callingScreen__name {
  color: white;
  padding-top: calc(50vh - 16px);
  font-size: 16px;
}
.videoContainer__body #remoteContainer .loadingScreen {
  background-color: #4d5c6c;
  height: 100%;
  position: absolute;
  width: 100%;
  text-align: center;
  top: 0;
}
.videoContainer__body #remoteContainer .loadingScreen .loadingScreen__image {
  width: 150px;
}
.videoContainer__body #remoteContainer .loadingScreen .loadingScreen__text {
  color: #fff;
  font-size: 16px;
  position: relative;
  top: -10px;
}
.videoContainer__body #remoteContainer .loadingScreen .loadingScreen__container {
  height: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
}
.videoContainer__body #remoteContainer video {
  width: 100%;
  height: 100%;
  min-height: 480px;
  background-color: #4d5c6c;
}
.videoContainer__body #remoteContainer video, .videoContainer__body #localVideo, .videoContainer__body .btnContainer {
  border-radius: 2px;
}
.videoContainer__body .videoContainer__spinner {
  height: 100%;
  position: absolute;
  z-index: -1;
  top: 0;
  transition: 0.5s;
  opacity: 0;
  width: calc(100% - 38px);
}
.videoContainer__body .videoContainer__spinner.display {
  opacity: 1;
  z-index: 11;
}
.videoContainer__body {
  min-width: 640px;
  transition: 0.5s;
  opacity: 0;
}
.videoContainer__body.display {
  opacity: 1;
}
.videoContainer__body > .flex.gutterHLg {
  min-width: 100%;
  overflow: hidden;
}
.videoContainer__body .videoContainer {
  position: relative;
  height: 480px;
}
.videoContainer__body .videoContainer.chatOpen {
    width: 70%;
    float: left;
}
.videoContainer__body .videoContainer.chatOpen video{
    object-fit: cover;
}
.chatContainer{
    display: none;
}
.videoContainer__body .chatContainer.chatOpen {
    display: flex;
    width: 30%;
    background-color: #d5dde1;
    height: 480px;
    float: left;
    position: relative;
    padding: 1%;
    font-size: 14px;
    box-sizing: border-box;
    overflow-y: auto;
    flex-direction: column;
}
.videoContainer__body .btnContainer {
  position: absolute;
  width: 100%;
  text-align: center;
  padding: 20px 0;
  bottom: 0;
  transition: 0.5s;
  opacity: 0;
}
.videoContainer__body .btnContainer.display {
  opacity: 1;
}
.videoContainer__body .btnContainer .btnContainer__overlay {
  background-color: #000;
  opacity: 0.3;
  height: 100%;
  width: 100%;
  position: absolute;
  bottom: 0;
  z-index: 0;
}
.videoContainer__body .btnContainer .btn {
  font-size: 18px;
  width: 45px;
  height: 45px;
  padding: 0;
  position: relative;
  margin: 0 3px;
  border-radius: 25px;
  outline: none;
}
.btn:focus{
    outline: none;
}
.videoContainer__body .btnContainer .btn.red.btn-default {
  color: #fff;
  background-color: #d9534f;
  border-color: #d43f3a;
}
.videoContainer__body .btnContainer .btn.red.btn-default:hover {
  color: #fff;
  background-color: #c9302c;
  border-color: #ac2925;
}
.videoContainer__body .btnContainer .btn-default:not([disabled]):hover {
  color: #333;
  background-color: #e6e6e6;
  border-color: #adadad;
}
.videoContainer__body .btnContainer .btn-default:not(.red):not([disabled]):active, .videoContainer__body .btnContainer .btn-default.paused, .videoContainer__body .btnContainer .btn-default.muted {
  color: #333;
  background-color: #d4d4d4;
  border-color: #8c8c8c;
}
.videoContainer__body .btnContainer .fa-phone.end-call {
  transform: rotate(135deg);
}
.videoContainer__body .btnContainer.top {
  top: 0;
  bottom: initial;
  justify-content: initial;
  font-size: 16px;
  color: white;
}
.videoContainer__body .btnContainer.top .durationDisplay__text, .videoContainer__body .btnContainer.top .nickname, .videoContainer__body .btnContainer.top .centPerMinute__container {
  position: relative;
  z-index: 10;
  width: 33.3%;
}
.videoContainer__body .btnContainer.top .nickname {
  padding-left: 20px;
}
.videoContainer__body .btnContainer.top .nickname:hover {
  cursor: pointer;
}
.videoContainer__body .btnContainer.top .callingString {
  width: 100%;
  position: relative;
  z-index: 10;
  text-align: center;
}
.videoContainer__body .btnContainer .js-fullScreen[disabled], .videoContainer__body .btnContainer .js-openchat[disabled] {
  opacity: 0.2;
}

.videoContainer__body .chatContainer .chatBar{
    display: flex;
    overflow-y: auto;
    position: relative;
    z-index: 1;
    flex-grow: 1;
    flex-flow: column-reverse;
    height: 100%;
}
.videoContainer__body .chatLogo{
    width: 100px;
    background-color: #4d5c6c;
    padding: 10px;
    border-radius: 60px;
    position: absolute;
    z-index: 0;
    top: calc(50% - 60px);
    left: calc(50% - 60px);
    opacity: .2;
}
.chatBubble{
    padding: 5px;
    max-width: 80%;
    border-radius: 5px;
    margin: 5px 0 5px 0;
    min-width: 35%;
}
.chatBubble:first-child{
    margin-bottom: 10px;
}
.chatBubble:last-child{
    margin-top: 0;
}
.chatBubble.mine{
    background-color: #25b4b0;
    align-self: flex-end;
}
.chatBubble.theirs{
    background-color: #fff;
    align-self: flex-start;
}
.chatBubble>.caption{
    font-size: 10px;
    margin-bottom: 3px;
    font-weight: 700;
}
.chatBubble>.time{
    font-size: 9px;
    margin-top: 3px;
    font-weight: 700;
    text-align: right;
}
.chatInput{
    height: 30px;
    border-radius: 5px;
    border: none;
    margin-bottom: 3px;
    text-indent: 5px;
    font-size: 14px;
    width: 100%;
}
.videoContainer__body .btnContainer > .openchatbtn{
    float: right;
    margin-right: 7%;
}
.btnContainer__video{
    float: left;
    margin-left: calc(50% - 102px);
}
 .videoContainer__body .btnContainer .notification, .videoContainer__body .btnContainer .btn-default.notification:hover,.videoContainer__body .btnContainer .btn-default.notification:not(.red):not([disabled]):active, .videoContainer__body .btnContainer .btn-default.notification:focus{
    border: 2px solid #ffa200;
}
.notification::after{
    content: '';
    position: absolute;
    width: 10px;
    height: 10px;
    border-radius: 5px;
    background-color: #ffa200;
    top: -1px;
    right: 2px;
}

.videoContainer__body.fullScreen{
    height: 100vh;
    width: 100vw;
}

.videoContainer.fullScreen, #remoteContainer.fullScreen video {
    height: 100vh;
    width: 100vw;
}

.videoContainer.fullScreen.chatOpen, #remoteContainer.fullScreen.chatOpen video{
    height: 100vh;
    width: 80vw;
}

.chatContainer.fullScreen.chatOpen {
    height: 100vh;
    width: 20vw;
}
.videoContainer__msgs{
    height: 100vh;
    background-color: #4d5c6c;
    display: flex;
    justify-content:center;
    align-items: center;
    font-size: 16px;
    color: #fff;
}
.videoContainer__msgs__logo{
    width: 100px;
    position: absolute;
    z-index: 2147483637;
    opacity: .2;
}
.videoContainer__msgs__text{
    z-index: 2147483638;
}
.videoContainer__msgs:not(.hide) + div{
    display: none;
}

